cmake_minimum_required(VERSION 2.8)

PROJECT(noman)

FIND_PACKAGE(OpenCV REQUIRED)

SET(SRC main.cpp GPIOlib.h
)

SET(PROJECT_NAME
 noman
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/lib/libGPIO.a)
